--- a/index.html
+++ b/index.html
@@ -240,10 +240,12 @@
                   style="display:inline-flex;align-items:center;justify-content:center;">Android版</span>
         </div>
         <div class="uk-margin-top" style="text-align: center;">
-            <a href="https://apps.apple.com/cn/app/%E6%A0%91%E6%B4%9E%E5%96%B5/id1574643729?platform=iphone"
+            <a href="https://apps.apple.com/us/app/秘罐-树洞-漂流瓶-匿名-秘密/id6447544777?platform=iphone"
                target="_blank"><img src="/static/image/Appstore.png" class="iosimg uk-margin-right"></a>
-            <a href="https://www.miao-app.com/app/android/ShuDongMiao.apk" target="_blank"><img
+            <!--
+               <a href="https://www.miao-app.com/app/android/ShuDongMiao.apk" target="_blank"><img
                     src="/static/image/Android.png" class="androidimg uk-margin-left"></a>
+                    -->
         </div>
 
 
@@ -253,10 +255,12 @@
                 <a href="/app/privacy.html" target="_blank" class="footer_a">隐私策略</a>&nbsp;&nbsp;
                 <a href="mailto:toquery@qq.com" target="_blank" class="footer_a">联系我们</a>
             </div>
+            <!-- 
             <div class="color_273D37 uk-margin-small-top">
                 <a href="https://beian.miit.gov.cn/state/outPortal/loginPortal.action#/Integrated/index" target="_blank"
                    class="support_a">鲁ICP备xxxxx号</a>
             </div>
+            -->
             <div class="uk-margin-small-top">Copyright © 2023 SC. All Rights Reserved.</div>
         </div>
     </div>
