--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <a href="https://apps.apple.com/us/app/秘罐-树洞-漂流瓶-匿名-秘密/id6447544777?platform=iphone"
                target="_blank"><img src="/static/image/Appstore.png" class="iosimg uk-margin-right"></a>
             <!--
-               <a href="https://www.miao-app.com/app/android/ShuDongMiao.apk" target="_blank"><img
+               <a href="" target="_blank"><img
                     src="/static/image/Android.png" class="androidimg uk-margin-left"></a>
                     -->
         </div>
