--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
 
         <div class="uk-margin-xlarge-top uk-margin-large-bottom uk-nav-center">
             <div>
-                <a href="/app/agreement.html" target="_blank" class="footer_a">用户协议</a>&nbsp;&nbsp;
-                <a href="/app/privacy.html" target="_blank" class="footer_a">隐私策略</a>&nbsp;&nbsp;
+                <a href="/agreement.html" target="_blank" class="footer_a">用户协议</a>&nbsp;&nbsp;
+                <a href="/privacy.html" target="_blank" class="footer_a">隐私策略</a>&nbsp;&nbsp;
                 <a href="mailto:toquery@qq.com" target="_blank" class="footer_a">联系我们</a>
             </div>
             <!-- 
